# solid-sim-tutorial-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
muda/docs/muda-doc/: README.md
muda/docs/muda-doc/docs/: aabb_8h_source.html  agent_8h_source.html  algo__mapper_8h_source.html  always_8h_source.html  analytic__inverse_8h_source.html  annotated.html  annotated_dup.js  aos__sub__field_8h_source.html  aos__sub__field_8inl_source.html  aosoa__sub__field_8h_source.html  aosoa__sub__field_8inl_source.html  as__eigen_8h_source.html  assert_8h_source.html  atomic_8h_source.html  axpby_8inl_source.html  bcoo__matrix__view_8h_source.html  bcoo__matrix__view_8inl_source.html  bcoo__matrix__viewer_8h_source.html  bcoo__matrix__viewer_8inl_source.html  bcoo__vector__view_8h_source.html  bcoo__vector__view_8inl_source.html  bcoo__vector__viewer_8h_source.html  bcoo__vector__viewer_8inl_source.html  bounding__volume_8h_source.html  bsr__matrix__view_8h_source.html  bsr__matrix__view_8inl_source.html  bsr__spmv_8inl_source.html  buffer_8h_source.html  buffer__2d__view_8h_source.html  buffer__2d__view_8inl_source.html  buffer__3d__view_8h_source.html  buffer__3d__view_8inl_source.html  buffer__fwd_8h_source.html  buffer__info__accessor_8h_source.html  buffer__launch_8h_source.html  buffer__launch_8inl_source.html  buffer__view_8h.html  buffer__view_8h.js  buffer__view_8h_source.html  buffer__view_8inl_source.html  (+1113 more)
muda/docs/muda-doc/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_11.js  classes_14.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_b.js  classes_c.js  files_1.js  functions_2.js  pages_1.js  searchdata.js
simulators/: CMakeLists.txt
simulators/1_mass_spring/: CMakeLists.txt
simulators/1_mass_spring/include/: InertialEnergy.h  MassSpringEnergy.h  device_uti.h  simulator.h  square_mesh.h  uti.h
simulators/1_mass_spring/src/: InertialEnergy.cu  MassSpringEnergy.cu  device_uti.cu  main.cpp  simulator.cpp  simulator.cu  square_mesh.cpp  uti.cu
simulators/2_dirichlet/: CMakeLists.txt
simulators/2_dirichlet/include/: simulator.h  uti.h
simulators/2_dirichlet/src/: GravityEnergy.cu  device_uti.cu  main.cpp  simulator.cu  uti.cu
simulators/3_contact/: CMakeLists.txt
simulators/3_contact/include/: BarrierEnergy.h  simulator.h  uti.h
simulators/3_contact/src/: BarrierEnergy.cu  MassSpringEnergy.cu  main.cpp  simulator.cu
simulators/4_friction/: CMakeLists.txt
simulators/4_friction/include/: BarrierEnergy.h  FrictionEnergy.h  simulator.h
simulators/4_friction/src/: BarrierEnergy.cu  FrictionEnergy.cu  device_uti.cu  main.cpp  simulator.cu
simulators/5_mov_dirichlet/: CMakeLists.txt
simulators/5_mov_dirichlet/include/: BarrierEnergy.h  FrictionEnergy.h  SpringEnergy.h  simulator.h  uti.h
simulators/5_mov_dirichlet/src/: BarrierEnergy.cu  FrictionEnergy.cu  InertialEnergy.cu  MassSpringEnergy.cu  SpringEnergy.cu  main.cpp  simulator.cu  square_mesh.cpp  uti.cu
simulators/6_inv_free/: CMakeLists.txt
simulators/6_inv_free/include/: BarrierEnergy.h  NeoHookeanEnergy.h  NeoHookean_auto.h  SparseMatrix.h  simulator.h  uti.h
simulators/6_inv_free/src/: BarrierEnergy.cu  NeoHookeanEnergy.cu  NeoHookean_auto.cu  device_uti.cu  main.cpp  simulator.cu  square_mesh.cpp
simulators/7_self_contact/: CMakeLists.txt
simulators/7_self_contact/include/: BarrierEnergy.h  FrictionEnergy.h  NeoHookeanEnergy.h  distance.h  simulator.h  square_mesh.h  uti.h
simulators/7_self_contact/src/: BarrierEnergy.cu  FrictionEnergy.cu  NeoHookeanEnergy.cu  NeoHookean_auto.cu  SpringEnergy.cu  main.cpp  simulator.cu  square_mesh.cpp  uti.cu
simulators/7_self_contact/src/distance/: CCD.cu  PointEdgeDistance.cu
simulators/8_self_friction/: CMakeLists.txt
simulators/8_self_friction/include/: BarrierEnergy.h  FrictionEnergy.h  GravityEnergy.h  InertialEnergy.h  SpringEnergy.h  distance.h  simulator.h  square_mesh.h
simulators/8_self_friction/src/: BarrierEnergy.cu  FrictionEnergy.cu  NeoHookeanEnergy.cu  NeoHookean_auto.cu  SparseMatrix.cu  main.cpp  simulator.cu  square_mesh.cpp
simulators/8_self_friction/src/distance/: PointEdgeDistance.cu  PointLineDistance.cu  PointPointDistance.cu
